--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,11 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.navbar-menu {
+  background-color: aquamarine;
+}
+
+.navbar-item {
+  font-weight: bold;
+}
