--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,31 @@
   font-weight: bold;
 }
 
+.title {
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+h1 {
+  font-size: 60px !important;
+}
+
 p {
   font-weight: bold;
   font-size: 15px;
+}
+
+.column:hover {
+  background-color: ghostwhite;
+}
+
+.modal {
+  width: 50%;
+  height: 50%;
+  margin: auto;
+  box-shadow:  0px 0px 5px 5px ghostwhite;
+}
+
+.modal-background, .modal-card-body {
+  background-color: white !important;
 }
