--- a/src/App.css
+++ b/src/App.css
@@ -50,32 +50,20 @@ p {
   box-shadow:  0px 0px 5px 5px ghostwhite;
 }
 
-.modal-background, .modal-card-body {
+.modal-background {
   background-color: white !important;
 }
 
-.modal-card {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-}
-
 #modal-img {
-  height: 100%;
-  width: 30%;
-  float: left;
+    height: 450px;
 }
 
 #stats {
-  margin-left: 30%;
   border: 5px solid aquamarine !important;
 }
 
 h2 {
-  padding-left: 5% !important;
+  padding-left: 3% !important;
   text-align: left;
   font-size: 30px !important;
 }
